# libpartikel

./: .gitignore  CMakeLists.txt  README.md  demo.c  editor.c  main.c  partikel.h
